fix overflowing text in drag and drop quizzes

--- a/src/main/webapp/app/exercises/quiz/shared/questions/drag-and-drop-question/drag-and-drop-question.component.scss
+++ b/src/main/webapp/app/exercises/quiz/shared/questions/drag-and-drop-question/drag-and-drop-question.component.scss
@@ -136,7 +136,7 @@
                                 padding: 0;
                                 vertical-align: middle;
                                 display: inline-block;
-                                white-space: nowrap;
+                                font-size: 1rem;
                             }
                         }
                     }
